# profileit

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
example/: profile_masked_loss.py
src/profileit/: __init__.py  _torch_profile.py
test/: test_profileit.py
