[project]
name = "profileit"
version = "0.1.1"
description = "A Python library designed to assist in profiling PyTorch models."
readme = "README.md"
authors = [
    { name = "Yrom", email = "yrom@qq.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch",
    "wrapt>=1.17.2",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
